# scheurwater-et-al-2021

./: .gitignore  Notebook.ipynb  Peak_detection_algorithm.ipynb  README.md  pyproject.toml
data/traintest/picologs/: raw_data_pico_20190205_0708.csv  raw_data_pico_20190218_1_0708.csv  raw_data_pico_20190218_3_0708.csv  raw_data_pico_20190225_0708.csv  raw_data_pico_20190226_0708.csv  raw_data_pico_20190227_0708.csv  raw_data_pico_20190301_0708.csv  raw_data_pico_20190304_0708.csv  raw_data_pico_20190305_0708.csv  raw_data_pico_20190403_1_0708.csv  raw_data_pico_20190403_2_0708.csv  raw_data_pico_20190405_1_0708.csv  raw_data_pico_20190405_2_0708.csv  raw_data_pico_20190411_1_0708.csv  raw_data_pico_20190411_2_0708.csv  raw_data_pico_20190412_1_0708.csv  raw_data_pico_20190412_2_0708.csv  raw_data_pico_20190415_0708.csv
data/traintest/videos/: raw_data_video_k13_20190227_1108.csv  raw_data_video_k21_20190304_1012.csv  raw_data_video_k2_20190301_1108.csv  raw_data_video_k2_20190403_1108.csv  raw_data_video_k2_20190411_1108.csv  raw_data_video_k2_20190416_1108.csv  raw_data_video_k84_20190405__corr37sec_1108.csv  ruwe_data_video_k84_20190226v2_1108.csv  ruwe_data_video_k84_20190305_1108.csv  ruwe_data_video_k84_20190415_1108.csv
data/validation/picologs/: raw_data_pico_ylva_20191122_deel2_0308.csv  raw_data_pico_ylva_20191128_deel1_0308.csv  raw_data_pico_ylva_20191128_deel2_0308.csv  raw_data_pico_ylva_20191129_deel1_0308.csv  raw_data_pico_ylva_20191129_deel2_0308.csv  raw_data_pico_ylva_20191203_deel1_0308.csv  raw_data_pico_ylva_20191203_deel2_0308.csv  (+21 more)
(+14 files in other folders)
